--- a/modules-available/locationinfo/frontend/doorsign.html
+++ b/modules-available/locationinfo/frontend/doorsign.html
@@ -861,6 +861,7 @@ optional:
 
 		function Update() {
 			var tmp = GetState();
+
 			if (tmp == null) {
 				ComputeCurrentState();
 				return;
@@ -873,8 +874,10 @@ optional:
 				SetFreeSeats(-1);
 			} else if (tmp.state == "Free") {
 				$("#courseHeading").text(t("free") + " " + GetTimeDiferenceAsString(tmp.end, new MyDate()));
+				SetFreeSeats(currentfreePcs);
 			} else if (tmp.state == "FreeNoEnd") {
 				$("#courseHeading").text(t("free"));
+				SetFreeSeats(currentfreePcs);
 			}
 			var now = new MyDate();
 			//console.log(now.getHours()+":"+now.getMinutes()+":"+now.getSeconds());
@@ -985,6 +988,7 @@ optional:
 		var minX;
 		var xDifference;
 		var yDifference;
+		var currentfreePcs = 0;
 
 		function generateRoomLayoutDiv(width) {
 			var div = document.createElement("div");
@@ -1187,7 +1191,7 @@ optional:
 				}
 			}
 			if (state == null || state.state == "FreeNoEnd" || state.state == "Free") {
-				SetFreeSeats(freePcs);
+				currentfreePcs = freePcs;
 			}
 
 		}
